# caldav_cli

./: AGENTS.md  README.md  SKILL.md  main.py  pyproject.toml
src/caldav_cli/: __init__.py  client.py  config.py  main.py
