[project]
name = "caldav-cli"
version = "0.1.0"
description = "CalDAV CLI for OpenClaw — manage calendar events via IMAP/CalDAV"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "caldav>=3.1.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
caldav_cli = "caldav_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
